[tool.poetry]
name = "twilio-python-async"
version = "0.1.0"
description = "An asynchronous Twilio client"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.23.3"

[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
isort = ">=5.10.1"
mypy = ">=1.0.0"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.20.3"
tox = ">=4.0.8"
ruff = ">=0.0.242"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["twilio_async", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=twilio_async --cov-report term-missing"

[tool.ruff]
select=["T201", "T203"]
ignore=["E501", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
