[tool.poetry]
name = "twilio-python-async"
version = "0.2.0"
description = "An asynchronous Twilio client"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/twilio-python-async"
homepage = "https://github.com/sanders41/twilio-python-async"
documentation = "https://github.com/sanders41/twilio-python-async"
keywords = ["twilio", "async", "python", "sms", "messaging"]
classifiers=[
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
packages = [
  { include = "twilio_async" },
]
include = ["twilio_async/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.23.3"
pydantic = ">=1.10.4"

[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
isort = ">=5.10.1"
mypy = ">=1.0.0"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.20.3"
ruff = ">=0.0.242"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["twilio_async", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=twilio_async --cov-report term-missing"
asyncio_mode = "auto"

[tool.ruff]
select=["E", "F", "T201", "T203"]
ignore=["E501", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
