[tool.poetry]
name = "twilio-python-async"
version = "0.2.0"
description = "An asynchronous Twilio client"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/twilio-python-async"
homepage = "https://github.com/sanders41/twilio-python-async"
documentation = "https://github.com/sanders41/twilio-python-async"
keywords = ["twilio", "async", "python", "sms", "messaging"]
classifiers=[
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
packages = [
  { include = "twilio_async" },
]
include = ["twilio_async/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.23.3"
pydantic = ">=1.10.4"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.1.1"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.20.3"
ruff = ">=0.0.259"
black = ">=23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=twilio_async --cov-report term-missing"
asyncio_mode = "auto"

[tool.ruff]
select = ["E", "F", "T201", "T203", "I001"]
ignore = ["E501"]
line-length = 100
fix = true
